# zephyr

./: .shippable.yml  CODEOWNERS  arduino_due_build_and_run.bat  build_and_run_scripts.bat  freedom_build_and_run.bat  mem_protect_test_script.bat  nrf52840_build_and_run.bat  nrf52_build_and_run.bat  nrf9160_build_and_run.bat  west.yml
arch/: Kconfig
arch/arm/core/: CMakeLists.txt  Kconfig  fatal.c  fault.c  fault_s.S  float.c  isr_wrapper.S  swap_helper.S  thread.c  userspace.S
arch/arm/include/: kernel_arch_func.h  offsets_short_arch.h
boards/arm/arduino_due/: arduino_due_defconfig
boards/arm/mps2_an386/: Kconfig.board  Kconfig.defconfig  board.cmake  mps2_an386.dts  mps2_an386.yaml  mps2_an386_defconfig  pinmux.c
boards/arm/mps2_an521/: CMakeLists.txt
boards/arm/nrf51dk_nrf51422/: CMakeLists.txt  nrf_timer_timer.c
boards/arm/nrf5340_dk_nrf5340/: Kconfig
boards/common/: openocd.board.cmake
doc/: conf.py
doc/releases/: release-notes-2.5.rst
drivers/entropy/: Kconfig.nrf5
drivers/ipm/: Kconfig  Kconfig.nrfx  Kconfig.nrfx_ipc_channel  ipm_nrfx_ipc.c  ipm_nrfx_ipc.h
drivers/timer/: cortex_m_systick.c  nrf_rtc_timer.c
drivers/watchdog/: Kconfig.nrfx
ext/hal/: CMakeLists.txt
include/: kernel.h
include/app_memory/: app_memdomain.h
include/linker/: linker-defs.h  priv_stacks-noinit.ld
kernel/: fatal.c  kheap.c  mem_domain.c  mempool_sys.c
lib/os/: CMakeLists.txt
scripts/: gen_app_partitions.py  gen_priv_stacks.py
soc/arm/: Kconfig
subsys/: CMakeLists.txt
subsys/tfm/: CMakeLists.txt
tests/cmsis_rtos_v2/: prj.conf
(+160 files in other folders)
